--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@clr/core": "^3.0.0-next.3",
     "@clr/icons": "^2.3.2",
     "@clr/ui": "^2.3.2",
+    "@ngx-translate/core": "11.0.1",
+    "@ngx-translate/http-loader": "4.0.0",
     "@ngrx/entity": "^8.5.2",
     "@ngrx/store": "^8.5.2",
+    "@ngrx/effects": "8.5.2",
+    "@ngrx/router-store": "8.5.2",
     "@webcomponents/custom-elements": "^1.3.1",
     "@webcomponents/shadycss": "^1.9.3",
     "@webcomponents/webcomponentsjs": "^2.4.0",
@@ -31,7 +35,7 @@
     "rxjs": "^6.5.3",
     "semver": "^6.3.0",
     "tslib": "^1.10.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.9.1"
   },
   "scripts": {
     "ng": "ng",
@@ -42,15 +46,15 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.20",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular/cli": "~8.3.20",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~7.0.0",
     "@carto/carto-vl": "1.4.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
