--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/animations": "^9.0.0-rc.5",
+    "@angular/common": "^9.0.0-rc.5",
+    "@angular/compiler": "^9.0.0-rc.5",
+    "@angular/core": "^9.0.0-rc.5",
+    "@angular/forms": "^9.0.0-rc.5",
+    "@angular/platform-browser": "^9.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.5",
+    "@angular/router": "^9.0.0-rc.5",
     "@carto/airship-bridge": "^2.1.1",
     "@carto/airship-components": "^2.1.1",
     "@carto/airship-icons": "^2.1.1",
@@ -35,7 +35,7 @@
     "rxjs": "^6.5.3",
     "semver": "^6.3.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "scripts": {
     "ng": "ng",
@@ -46,15 +46,15 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.900.0-rc.5",
+    "@angular/cli": "~9.0.0-rc.5",
+    "@angular/compiler-cli": "^9.0.0-rc.5",
+    "@angular/language-service": "~9.0.0-rc.5",
     "@carto/carto-vl": "1.4.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -65,6 +65,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.6.4"
   }
 }
