--- a/package.json
+++ b/package.json
@@ -1,70 +1,76 @@
 {
-  "name": "nwk-web",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^9.0.0-rc.5",
-    "@angular/common": "^9.0.0-rc.5",
-    "@angular/compiler": "^9.0.0-rc.5",
-    "@angular/core": "^9.0.0-rc.5",
-    "@angular/forms": "^9.0.0-rc.5",
-    "@angular/platform-browser": "^9.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.5",
-    "@angular/router": "^9.0.0-rc.5",
-    "@carto/airship-bridge": "^2.1.1",
-    "@carto/airship-components": "^2.1.1",
-    "@carto/airship-icons": "^2.1.1",
-    "@carto/airship-style": "^2.1.1",
-    "@clr/angular": "^2.3.2",
-    "@clr/core": "^3.0.0-next.3",
-    "@clr/icons": "^2.3.2",
-    "@clr/ui": "^2.3.2",
-    "@ngx-translate/core": "11.0.1",
-    "@ngx-translate/http-loader": "4.0.0",
-    "@ngrx/entity": "^8.5.2",
-    "@ngrx/store": "^8.5.2",
-    "@ngrx/effects": "8.5.2",
-    "@ngrx/router-store": "8.5.2",
-    "@webcomponents/custom-elements": "^1.3.1",
-    "@webcomponents/shadycss": "^1.9.3",
-    "@webcomponents/webcomponentsjs": "^2.4.0",
-    "core-js": "^3.4.7",
-    "leaflet": "^1.6.0",
-    "lit-element": "^2.2.1",
-    "ramda": "^0.26.1",
-    "rxjs": "^6.5.3",
-    "semver": "^6.3.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.5",
-    "@angular/cli": "~9.0.0-rc.5",
-    "@angular/compiler-cli": "^9.0.0-rc.5",
-    "@angular/language-service": "~9.0.0-rc.5",
-    "@carto/carto-vl": "1.4.2",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.6.4"
-  }
+    "name": "nwk-ehd",
+    "version": "0.0.0",
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^9.0.0-rc.5",
+        "@angular/cdk": "^8.2.3",
+        "@angular/common": "^9.0.0-rc.5",
+        "@angular/compiler": "^9.0.0-rc.5",
+        "@angular/core": "^9.0.0-rc.5",
+        "@angular/forms": "^9.0.0-rc.5",
+        "@angular/platform-browser": "^9.0.0-rc.5",
+        "@angular/platform-browser-dynamic": "^9.0.0-rc.5",
+        "@angular/router": "^9.0.0-rc.5",
+        "@carto/airship-bridge": "^2.1.1",
+        "@carto/airship-components": "^2.1.1",
+        "@carto/airship-icons": "^2.1.1",
+        "@carto/airship-style": "^2.1.1",
+        "@carto/carto.js": "^4.1.11",
+        "@clr/angular": "^3.0.0-next.3",
+        "@clr/core": "^3.0.0-next.3",
+        "@clr/icons": "^3.0.0-next.3",
+        "@clr/ui": "^3.0.0-next.3",
+        "@ngrx/data": "^8.5.2",
+        "@ngrx/effects": "8.5.2",
+        "@ngrx/entity": "^8.5.2",
+        "@ngrx/router-store": "8.5.2",
+        "@ngrx/store": "^8.5.2",
+        "@ngx-translate/core": "11.0.1",
+        "@ngx-translate/http-loader": "4.0.0",
+        "@webcomponents/custom-elements": "^1.3.1",
+        "@webcomponents/shadycss": "^1.9.3",
+        "@webcomponents/webcomponentsjs": "^2.4.0",
+        "core-js": "^3.4.7",
+        "leaflet": "^1.6.0",
+        "lit-element": "^2.2.1",
+        "lodash": "^4.17.15",
+        "ramda": "^0.26.1",
+        "rxjs": "^6.5.3",
+        "sass": "^1.23.7",
+        "semver": "^6.3.0",
+        "tslib": "^1.10.0",
+        "yarn": "^1.21.0",
+        "zone.js": "~0.10.2"
+    },
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.900.0-rc.5",
+        "@angular/cli": "~9.0.0-rc.5",
+        "@angular/compiler-cli": "^9.0.0-rc.5",
+        "@angular/language-service": "~9.0.0-rc.5",
+        "@carto/carto-vl": "1.4.2",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^5.1.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "protractor": "~5.4.0",
+        "ts-node": "~8.5.4",
+        "tslint": "^5.11.0",
+        "typescript": "~3.7.3"
+    }
 }
