--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
         "@turf/bbox": "^6.0.1",
+        "@types/geojson": "^7946.0.7",
         "@webcomponents/custom-elements": "^1.3.1",
         "@webcomponents/shadycss": "^1.9.3",
         "@webcomponents/webcomponentsjs": "^2.4.0",
