--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
         "@turf/bbox": "^6.0.1",
-        "@types/geojson": "^7946.0.7",
         "@webcomponents/custom-elements": "^1.3.1",
         "@webcomponents/shadycss": "^1.9.3",
         "@webcomponents/webcomponentsjs": "^2.4.0",
@@ -54,7 +53,9 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "build-prod": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod --base-href https://newark-planning.github.io/stackNwk/"
+        "build-ngh": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod --base-href https://newark-planning.github.io/stackNwk/",
+        "build-prod": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --prod",
+        "serve": "node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng serve"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.900.0-rc.5",
